tests/ui/ffi-attrs/ffi_const2.stderr
error[E0757]: `#[ffi_const]` function cannot be `#[ffi_pure]`
  --> $DIR/ffi_const2.rs:4:5
   |
LL |     #[unsafe(ffi_pure)]
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0757`.
